--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -3,15 +3,17 @@
     flex-wrap: wrap;
     gap: 16px;
     justify-content: center;
-    margin: 56px 0;
+    padding: 140px 0;
 }
 
 .project-card-wrapper {
     width: 600px;
+    border: 2px solid white;
+    padding: 4px;
 }
 
 .project-card-wrapper h3 {
-    
+    color: rgb(247, 203, 203);
 }
 
 .project-card-wrapper div img {
@@ -21,11 +23,12 @@
 }
 
 .project-card-content {
-    
+    background-color: black;
+
     
 }
 
 .project-card-wrapper div p {
-    background-color: white;
     min-height: 100px;
+    color: rgb(247, 203, 203);
 }
